# mtrendo_test

./: dbt_project.yml  pyproject.toml
models/: main_report.sql  output.sql  schema.yml  source.yml  top_taxi_ids.sql
