[tool.poetry]
name = "mtrendo-test"
version = "0.1.0"
description = ""
authors = ["Mikhail Vakhmenin"]
readme = "README.md"
packages = [{include = "mtrendo_test"}]

[tool.poetry.dependencies]
python = "3.10.6"
google-cloud-bigquery = "3.25"
db-dtypes = "1.2"
pandas = "1.5.2"
numpy= "1.26.4"
dbt-core = "^1.8.4"
dbt-bigquery = "^1.8.2"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
